k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: asterisk-call-tcp
  annotations:
    cloud.google.com/load-balancer-type: "Internal"

spec:
  type: LoadBalancer
  loadBalancerIP: 10.164.0.17
  selector:
    app: asterisk-call
  ports:
    - port: 5060
      targetPort: 5060
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: asterisk-call-udp
  annotations:
    cloud.google.com/load-balancer-type: "Internal"

spec:
  type: LoadBalancer
  loadBalancerIP: 10.164.0.18
  selector:
    app: asterisk-call
  ports:
    - port: 5060
      targetPort: 5060
      protocol: UDP
